manifests/resources-ssl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app-depl
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
      - name: sample-eks-app-container
        image: lakeside763/school-mgt:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sample-app-svc
  namespace: development
spec:
  selector:
    app: sample-app
  ports:
  - protocol: TCP
    port: 443 
    targetPort: 80
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app-ingress
  namespace: development
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: sample-app
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: sample-app
spec:
  ingressClassName: alb
  rules:
    - host: dev-api.676981429700.realhandsonlabs.net
      http: 
        paths:
          - path: "/*"
            pathType: ImplementationSpecific
            backend:
              service:
                name: sample-app-svc
                port:
                  number: 443
